sets, optimizations, etc